[css-grid] Clamp automatic minimum size of max track sizing is fixed

We were not clamping the automatic minimum size when
the min track sizing function was intrinsic (e.g. minmax(auto, 0px)).
However the spec (https://drafts.csswg.org/css-grid/#min-size-auto)
is very clear regarding that.

This patch modifies
GridTrackSizingAlgorithm::SizeTrackToFitNonSpanningItem(),
so in the case of a fixed max track sizing function it clamps
the automatic minimum size of the item to the stretch fit
of the grid area's size.
It needs to take into account if the item has fixed size, margin, border
and/or padding as those cannot be clamped.

Added two new specific tests to verify this behavior,
and corrected a bunch of other tests that were wrong.

BUG=786971
TEST=external/wpt/css/css-grid/grid-items/grid-minimum-size-grid-items-022.html
TEST=external/wpt/css/css-grid/grid-items/grid-minimum-size-grid-items-023.html

Change-Id: I12d41fef346e81e917f443801f34db4d1eadbd90
Reviewed-on: https://chromium-review.googlesource.com/783213
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Commit-Queue: Manuel Rego Casasnovas <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#518962}
Former-commit-id: 93cb0356747a29c50dd85e716e7ef7894093a489